# dtu-vibe-ops-02476

./: .dockerignore  .gitignore  .pre-commit-config.yaml  FRONT-END.md  README.md  TODOS.md  cloudbuild.train.yaml  data.dvc  hello.txt.dvc  hpc_pyproject.toml.txt  models.dvc  profiling_guide.md  pyproject.toml  raw.dvc  tasks.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: api_deployment.yaml  deploy_docs.yaml  docker-build.yaml  linting.yaml  pre-commit-update.yaml  tests.yaml  train-manual.yaml
configs/: config.yaml  sweeps.yaml
configs/model/: baseline_cnn.yaml  efficientnet.yaml  resnet.yaml
configs/models/: baseline_cnn.yaml  efficientnet.yaml  resnet.yaml
configs/optimizers/: adam.yaml  sgd.yaml
data/: README.md
dockerfiles/: api.dockerfile  evaluate.dockerfile  inference.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: architecture.md  getting-started.md  index.md  installation.md
docs/source/api-reference/: api.md  data.md  models.md  training.md
docs/source/assets/javascripts/: mathjax.js  mermaid.js
docs/source/assets/stylesheets/: extra.css
docs/source/development/: ci-cd.md  contributing.md  testing.md
docs/source/examples/: api-usage.md  basic-training.md  custom-config.md
docs/source/user-guide/: deployment.md  evaluation.md  inference.md  training.md
hpc/: jobscript.sh  jobscript_sweep.sh
reports/: README.md  report.py
scripts/: create_gcs_bucket.sh  entrypoint.sh  quick_test.sh  setup_vertex_ai.sh  submit_training_job.sh  test_dvc_local.sh  test_training_local.sh
src/mlops_project/: api.py  backend.py  create_demo_model.py  data.py  dataloader.py  evaluate.py  model.py  profiler.py  profiler_test.py  subsample.py  train.py
tests/: __init__.py  conftest.py  test_api.py  test_data.py  test_model.py  test_subsampling.py
vertex-ai/: train-job.yaml
wandb/: latest-run
wandb/run-20260111_130628-jutslt0j/: run-jutslt0j.wandb
wandb/run-20260111_130628-jutslt0j/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
