[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "mlops_project"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Group-36", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.66.1",
    "dvc-gdrive>=3.0.1",
    "dvc-gs>=3.0.0",
    "fastapi==0.115.6",
    "torch==2.9.1",
    "torchvision==0.17.2",
    "lightning>=2.0.0,<2.3.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "typer==0.15.1",
    "uvicorn==0.34.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.14.11",
    "mkdocstrings-python==1.12.2",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
target-version = "py312"
line-length = 120
lint.select = [
  "A",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "D",
  "DJ",
  "DTZ",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FA",
  "I",
  "ICN",
  "INT",
  "ISC",
  "LOG",
  "N",
  "PGH",
  "PIE",
  "PT",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "S",
  "SIM",
  "SLF",
  "SLOT",
  "T10",
  "TCH",
  "TID",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  "B008",
  "B028",
  "B905",
  "COM812",
  "D100",
  "D107",
  "D211",
  "D212",
  "ERA001",
  "F821",
  "F841",
  "ISC001",
  "S101",
  "S301",
  "S311",
  "S603",
  "S605",
  "S607",
  "TC003",
  "W293",
]
lint.pydocstyle.convention = "google"

[tool.coverage.run]
omit = ["tests/*"]
