[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "mlops_project"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Group-36", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dvc>=3.66.1",
    "dvc-gdrive>=3.0.1",
    "dvc-gs>=3.0.0",
    "fastapi==0.115.6",
    "numpy>=1.24.0,<2.0.0",  # PyTorch 2.2.2 requires NumPy 1.x
    "torch==2.2.2",
    "torchvision==0.17.2",
    "lightning==2.2.1",  # Compatible with PyTorch 2.2.2
    "pytorch-lightning==2.2.1",  # Compatible with PyTorch 2.2.2
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "typer==0.15.1",
    "uvicorn[standard]==0.40.0",
    "wandb>=0.23.1",
    "hydra-core>=1.3.2",
    "pyyaml>=6.0",
    "ml_dtypes>=0.5.0",
    "onnx>=1.18.0",
    "onnxruntime==1.17.1",
    "onnxscript==0.1.0",
    "python-multipart>=0.0.21",
    "httpx>=0.28.1",
    "google-cloud-storage>=2.10.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "ruff==0.14.11",
    "mkdocstrings-python==1.12.2",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
target-version = "py312"
line-length = 120
lint.select = [
  "A",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "D",
  "DJ",
  "DTZ",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FA",
  "I",
  "ICN",
  "INT",
  "ISC",
  "LOG",
  "N",
  "PGH",
  "PIE",
  "PT",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "S",
  "SIM",
  "SLF",
  "SLOT",
  "T10",
  "TCH",
  "TID",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  "B008",
  "B028",
  "B905",
  "COM812",
  "D100",
  "D103",
  "D104",
  "D107",
  "D211",
  "D212",
  "ERA001",
  "F821",
  "F841",
  "ISC001",
  "S101",
  "S301",
  "S311",
  "S603",
  "S605",
  "S607",
  "TC003",
  "W293",
]
lint.pydocstyle.convention = "google"

[tool.ruff.lint.isort]
# Ensure consistent import sorting across all environments
known-first-party = ["mlops_project"]
# Explicitly mark common third-party packages to avoid misclassification
known-third-party = ["wandb", "hydra", "pytorch_lightning", "torch", "omegaconf"]
force-sort-within-sections = true
split-on-trailing-comma = false

[tool.coverage.run]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
